<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.diegoorozco.practica_5.RumbaFragment"
    android:orientation="vertical">

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="130dp"
        android:src="@drawable/rumba"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Rumba1"
        android:gravity="center"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lleras"/>
    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="150dp"
        android:src="@drawable/rumba2"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/barrio"/>
    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="150dp"
        android:src="@drawable/rumba3"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rumbaC"/>
    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="180dp"
        android:src="@drawable/rumba4"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/la33"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/Mapa"
        android:id="@+id/bRumbaMapa"/>


</LinearLayout>
</ScrollView>